--- a/index.html
+++ b/index.html
@@ -12,8 +12,39 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
+  <nav class="top-nav">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Contact</a>
+  </nav>
 
 <body>
+  <div class="container">
   <h1>My Resume</h1>
+  <section class="main-content">
+    <div class="intro">
+    <h2 class="mainh2">Introduction</h2>
+      <p>I am new to web development but constantly learning new things</p>
+    </div>
+    <div class="skills">
+      <h2 class="mainh2">Skills</h2>
+      <ul>
+      <li>HTML5</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      </ul>
+    </div>
+  </section>
+    <br>
+    <div class="second-content">
+    <h2>Work History</h2>
+    <p>Still working on that.</p>
+    </div>
+    <div class="third-content">
+    <h2>Contact</h2>
+    <p>email: od.mgnt@gmail.com</p>
+    </div>
+</div>
 </body>
 </html>
