--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>My Resume</title>
+    <title>My Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css" />
+    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+  <body>
+    <header>
+      <div class="container">
+        <h1>My<span>Resume</span></h1>
+        <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="bigContainer">
+    <div class="rightContent">
+      <img src="imgs/worker.jpeg">
+      <h2>John Doe</h2>
+      <p>The best FullStack Developer Ever!</p>
 
-<body>
-  <h1>My Resume</h1>
-</body>
+    </div>
+    <div class="leftContent">
+      <h2>Skills</h2>
+      <p>HTML</p>
+      <p>CSS</p>
+      <p>JAVASCRIPT</p>
+      <h2>Work History</h2>
+      <p>NOWHERE YET! SO HIRE ME!</p>
+    </div>
+    </div>
+    <footer>
+      <div class="button">
+        <button onclick="window.location.href='gmail.com'">Contact Me</button>
+      </div>
+    </footer>
+  </body>
 </html>
